--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   <a href="/ANIVERSARIO LARANJA/others pages/gif.html">oia esse gif</a>
   <br/>
   <br/>
-  <img src="/ANIVERSARIO LARANJA/img/RobloxScreenShot20250910_234058570.png" width="500" height="350"> 
+  <img src="img/RobloxScreenShot20250910_234058570.png" width="500" height="350"> 
   <script src="script.js"></script>
 </body>
 </html>
+
