--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
     </p>
   </footer>
 
-  <a href="/ANIVERSARIO LARANJA/others pages/gif.html">oia esse gif</a>
+  <a href="others pages/gif.html">oia esse gif</a>
   <br/>
   <br/>
   <img src="img/RobloxScreenShot20250910_234058570.png" width="500" height="350"> 
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
