--- a/galeria.html
+++ b/galeria.html
@@ -17,12 +17,12 @@
   <main>
     <h2>Tenho algumas coisas guardadas:</h2>
     <div class="galeria">
-      <img src="/ANIVERSARIO LARANJA/img/20220123_111419.jpg">
-      <img src="/ANIVERSARIO LARANJA/img/20220130_000715.jpg">
-      <img src="/ANIVERSARIO LARANJA/img/20240211_205452.jpg">
-      <img src="/ANIVERSARIO LARANJA/img/GetImage (13).png">
-      <img src="/ANIVERSARIO LARANJA/img/GetImage (14).png">
-      <img src="/ANIVERSARIO LARANJA/img/RobloxScreenShot20230502_162800390.png">
+      <img src="img/20220123_111419.jpg">
+      <img src="img/20220130_000715.jpg">
+      <img src="img/20240211_205452.jpg">
+      <img src="img/GetImage (13).png">
+      <img src="img/GetImage (14).png">
+      <img src="img/RobloxScreenShot20230502_162800390.png">
     </div>
   </main>
 
@@ -31,3 +31,4 @@
   </footer>
 </body>
 </html>
+
