--- a/others pages/gif.html
+++ b/others pages/gif.html
@@ -1,3 +1,3 @@
 <html>
-  <img src="/ANIVERSARIO LARANJA/movie/nwjnsgif.gif" width="900" height="900">
+  <img src="../movie/nwjnsgif.gif" width="900" height="900">
 </html>
